# dash

./: .gitmodules  CMakeLists.txt
CMakeExt/: Alpaka.cmake  CompilerFlags.cmake  Mephisto.cmake  Patterns.cmake
dart-impl/mpi/src/: dart_communication.c
dash/: CMakeLists.txt
dash/include/dash/: Cartesian.h  Dimensional.h  Distribution.h  Execution.h  Future.h  LocalArray.h  Mephisto.h  Pattern.h  TeamSpec.h  Types.h
dash/include/dash/algorithm/: Copy.h  Fill.h  ForEach.h  LocalRange.h  MinMax.h  Reduce.h  Sort.h  Transform.h
dash/include/dash/halo/: Halo.h
dash/include/dash/mephisto/: Entities.h  Executor.h  Util.h
dash/include/dash/pattern/: BlockPattern.h  BlockPattern1D.h  SeqTilePattern.h  ShiftTilePattern.h  SimpleBlockPattern.h  TilePattern.h  (+1 more)
dash/include/patterns/: block_range.h  local_pattern.h
dash/test/: Makefile
dash/test/algorithm/: ForEachTest.cc  ForEachTest.cu  MinMaxElementTest.cc  MinMaxElementTest.h  SortTest.cc  TransformTest.cc
patterns/: BalancedLocalPatternTest.cc  Makefile  PatternTree.h  Projection.h  Visualize.h  examples  examples.cpp  graph.cpp  main.cpp
patterns/include/patterns/: BlockCyclicPattern.h  BlockPattern.h  Configuration.h  ElementMapping.h  Entity.h  EntityMapping.h  EntityPattern.h  Node.h  PatternTree.h  Projection.h  TypeTraits.h  Visualize.h  block_iterator.h  block_range.h  entity.h  local_pattern.h
patterns/tests/: BlockPatternTest.hpp  BlockedBasePattern.h  CMakeLists.txt  DummyUnit.hpp  Makefile  blocked_base_pattern.h  local_pattern_test.cxx  local_pattern_test.h  main.cpp  test_entity.h
(+12 files in other folders)
